hphp/hack/test/typecheck/super_constraint_11.php.exp
File "super_constraint_11.php", line 22, characters 19-33:
Invalid argument (Typing[4110])
File "super_constraint_11.php", line 14, characters 31-42:
Some type constraint(s) are violated here
File "super_constraint_11.php", line 14, characters 23-23:
T is a constrained type parameter
File "super_constraint_11.php", line 11, characters 37-51:
This is an object of type NotWidgetParent
File "super_constraint_11.php", line 14, characters 31-42:
It is incompatible with an object of type WidgetParent
